@@ -135,6 +135,7 @@ devices:
         sel_macro: CONFIG_ARM_HYPERVISOR_SUPPORT
         index: 3
         undef_index: 2
+      INTERRUPT_VTIMER_EVENT: 2
   # Allwinner A10 Timer (timer/allwinner,sun4i-timer.txt)
   - compatible:
       - allwinner,sun4i-a10-timer
